src/scss/components/search/_search.scss
.su-homepage-search {
  @include responsive-spacing('padding', 8 null 1 null);

  background: $su-color-lagunita-light;
  background: url('../assets/svg/search_bg.svg') bottom right no-repeat,
    linear-gradient(
      90deg,
      $su-color-lagunita-dark 10%,
      $su-color-lagunita-light 100%
    );

  @include grid-media-between('md', 'lg') {
    background-size: contain;
  }

  @include grid-media-between('xs', 'md') {
    @include responsive-spacing('padding', 8 null);

    background: linear-gradient(
      90deg,
      $su-color-lagunita-dark 10%,
      $su-color-lagunita-light 100%
    );
  }

  .su-homepage-search__form {
    margin: 0 auto 3.5rem;
    max-width: 100rem;

    @include grid-media-between('xs', 'lg') {
      @include centered-column;
    }
  }

  .su-homepage-search__label {
    @include modular-typography(3);

    color: $su-color-white;
    margin: 0 auto 1.3rem;
    width: fit-content;
    max-width: 100%;

    @include grid-media-between('xs', 'md') {
      @include sr-only;
    }
  }

  .su-homepage-search_input-wrapper {
    position: relative;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: flex-end;

    .su-homepage-search__input {
      @include modular-typography(2);

      border-radius: 5rem;
      padding: 1.7rem 7.5rem 1.7rem 5.5rem;
      width: 100%;
      height: 100%;
      min-height: 10rem;
      max-width: 100%;
      margin: 0;

      @include grid-media-between('xs', 'sm') {
        font-size: 2.1rem;
        padding: 1.7rem 7.5rem 1.7rem 1.5rem;
        overflow: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;

        &::placeholder {
          color: #707070;
          font-style: italic;
          font-weight: $su-font-light;
        }
      }

      &::placeholder {
        color: #707070;
        font-style: italic;
        font-weight: $su-font-light;
      }
    }

    .su-homepage-search__submit {
      background-color: $su-color-lagunita;
      border: 1px solid $su-color-lagunita-dark;
      border-radius: 100%;
      padding: 1rem;
      position: absolute;
      margin-right: 1rem;
      transition: all 0.2s ease-in-out;

      &:hover,
      &:focus {
        background: $su-color-lagunita-light;
        border-color: $su-color-lagunita;
        box-shadow: 0 4px 4px 0 #00000040;
      }
    }
  }

  .ose-contact-us,
  .su-homepage-search__resources {
    display: block;

    @include grid-media-between('xs', 'md') {
      display: none;
    }
  }

  ul {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    column-gap: 2.8rem;
    row-gap: 2.2rem;
    list-style: none;
    max-width: 80rem;
    margin: 2.5rem auto;
    padding: 0;
  }

  li {
    margin: 0;
  }

  a {
    color: $su-color-white;
    text-decoration: underline;
  }

  a.ose-button {
    display: block;
    color: $su-color-white;
    background: $su-color-lagunita;
    border: 1px solid $su-color-lagunita-dark;
    border-radius: 3rem;
    font-weight: $su-font-regular;
    padding: 8px 22px;
    box-shadow: 0 4px 4px 0 #00000040;
    transition: all 0.2s ease-in-out;
    text-decoration: none;

    &:hover,
    &:focus {
      background: $su-color-lagunita-light;
      border-color: $su-color-lagunita;
      text-decoration: underline;
    }
  }

  .ose-contact-us {
    color: $su-color-white;
    font-style: italic;
    text-align: center;
    margin-top: 6.5rem;

    svg.mailto {
      display: none;
    }

    p {
      margin: 0;
    }
  }
}

